--- a/src/interfaces/NuevoCliente.form
+++ b/src/interfaces/NuevoCliente.form
@@ -85,6 +85,9 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="textFieldNombre">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textFieldNombreActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelNombre">
       <Properties>
